--- a/contract/templates/linhas/linhaorcamentaria_list.html
+++ b/contract/templates/linhas/linhaorcamentaria_list.html
@@ -14,9 +14,14 @@
                     </div>
                     <div class="card-body">
                         <!-- Campo de pesquisa -->
-                        <div class="input-group mb-3">
-                            <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar...">
-                        </div>
+                        <form method="GET" action="{% url 'linhaorcamentaria_list' %}">
+                            <div class="input-group mb-3">
+                                <input type="text" id="searchInput" class="form-control" name="search" value="{{ search_query }}" placeholder="Pesquisar...">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary" type="submit">Buscar</button>
+                                </div>
+                            </div>
+                        </form>
 
                         <!-- Tabela de listagem -->
                         <div class="table-responsive">
@@ -31,7 +36,7 @@
                                     </tr>
                                 </thead>
                                 <tbody id="linhaorcamentariaTable">
-                                    {% for linha in linhaorcamentarias %}
+                                    {% for linha in page_obj %}
                                     <tr>
                                         <td>{{ linha.get_classe_display }}</td>
                                         <td>{{ linha.centro_custo_solicitante }}</td>
@@ -60,34 +65,34 @@
                                 <ul class="pagination">
                                     {% if page_obj.has_previous %}
                                     <li class="page-item">
-                                        <a class="page-link" href="?page=1{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Primeira">
+                                        <a class="page-link" href="?page=1{% if search_query %}&search={{ search_query }}{% endif %}" aria-label="Primeira">
                                             <span aria-hidden="true">&laquo;&laquo;</span>
                                             <span class="sr-only">Primeira</span>
                                         </a>
                                     </li>
                                     <li class="page-item">
-                                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Anterior">
+                                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}" aria-label="Anterior">
                                             <span aria-hidden="true">&laquo;</span>
                                             <span class="sr-only">Anterior</span>
                                         </a>
                                     </li>
                                     {% endif %}
-                                    {% for num in paginator.page_range %}
+                                    {% for num in page_obj.paginator.page_range %}
                                     {% if num == page_obj.number %}
                                     <li class="page-item active"><span class="page-link">{{ num }} <span class="sr-only">(atual)</span></span></li>
                                     {% else %}
-                                    <li class="page-item"><a class="page-link" href="?page={{ num }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">{{ num }}</a></li>
+                                    <li class="page-item"><a class="page-link" href="?page={{ num }}{% if search_query %}&search={{ search_query }}{% endif %}">{{ num }}</a></li>
                                     {% endif %}
                                     {% endfor %}
                                     {% if page_obj.has_next %}
                                     <li class="page-item">
-                                        <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Próxima">
+                                        <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}" aria-label="Próxima">
                                             <span aria-hidden="true">&raquo;</span>
                                             <span class="sr-only">Próxima</span>
                                         </a>
                                     </li>
                                     <li class="page-item">
-                                        <a class="page-link" href="?page={{ paginator.num_pages }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}" aria-label="Última">
+                                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% if search_query %}&search={{ search_query }}{% endif %}" aria-label="Última">
                                             <span aria-hidden="true">&raquo;&raquo;</span>
                                             <span class="sr-only">Última</span>
                                         </a>
