ajuste em auxilios

--- a/auxilios/templates/auxiliocolaborador_form.html
+++ b/auxilios/templates/auxiliocolaborador_form.html
@@ -16,7 +16,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="baneficiado">Beneficiado</label>
-                                        {{ form.baneficiado }}
+                                        {{ form.beneficiado }}
                                     </div>
                                     <div class="form-group">
                                         <label for="orcamento">Orçamento</label>
