--- a/templates/index.html
+++ b/templates/index.html
@@ -222,7 +222,7 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#tables">
                   <i class="fas fa-table"></i>
-                  <p>Linhas Orçamentarias</p>
+                  <p>Linhas Orçamentárias</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="tables">
