ajuste em auxilios

--- a/templates/index.html
+++ b/templates/index.html
@@ -88,8 +88,8 @@
                 <div class="collapse" id="dashboard">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="">
-                        <span class="sub-item">Dashboard 1</span>
+                      <a href="{% url 'colaborador_chart' %}">
+                        <span class="sub-item">Auxílios</span>
                       </a>
                     </li>                               
                   </ul>
