--- a/contract/templates/contratos/contrato_list.html
+++ b/contract/templates/contratos/contrato_list.html
@@ -35,7 +35,7 @@
                   <td>{{ contrato.fiscal_principal }}</td>
                   <td>{{ contrato.valor_contrato }}</td>
                   <td>
-                    <a href="{% url 'contrato-detail' contrato.pk %}" class="btn btn-info btn-sm">Detalhes</a>
+                    <a href="{% url 'contrato_detail' contrato.pk %}" class="btn btn-info btn-sm">Detalhes</a>
                     <a href="{% url 'contrato-update' contrato.pk %}" class="btn btn-warning btn-sm">Editar</a>
                     <form action="{% url 'contrato-delete' contrato.pk %}" method="POST" style="display:inline;">
                       {% csrf_token %}
