--- a/contract/templates/contratos/contrato_detail.html
+++ b/contract/templates/contratos/contrato_detail.html
@@ -63,8 +63,8 @@
                   <td>{{ prestacao.data_pagamento|default_if_none:"-" }}</td>
                   <td>
                     <a href="{% url 'editar_prestacao' prestacao.pk %}" class="btn btn-warning btn-sm">Editar</a>
-                    <a href="{% url 'deletar_prestacao' prestacao.pk %}" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja deletar esta prestação?');">Deletar</a>
-                  </td>
+                    <a href="{% url 'deletar_prestacao' prestacao.pk %}" class="btn btn-danger btn-sm">Deletar</a>
+                </td>                
                 </tr>
                 {% endfor %}
               </tbody>
